Fixes #19 and #20 - Added full flow: 'Spec -> TCK -> Coverage Report -> Example Test' to Sparkplug